--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 safe: true
 lsi: false
-markdown: rdiscount
+markdown: maruku
 pygments: true
 paginate: 2
 permalink: /:categories/:year/:month/:day/:title/
